2007-06-21  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* javax/swing/text/html/parser/AttributeList.java (getValues):
	Check if values is null.

2007-06-21  Roman Kennke  <roman@kennke.org>

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_CairoGraphics2D.c,
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_ComponentGraphicsCopy.c,
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkFileDialogPeer.c:
	Fix some type signatures.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkGraphicsEnvironment.c:
	Fix intendation.

2007-06-21  Jeroen Frijters  <jeroen@frijters.net>

	* java/io/ObjectStreamClass.java (getClassUID): Return 0L for
	enums and proxies.

2007-06-21  Jeroen Frijters  <jeroen@frijters.net>

	* java/net/URLClassLoader.java
	(URLClassLoader(URL[],ClassLoader,URLStreamHandlerFactory):
	Add factory to cache before calling addURLS.
	(run): Don't call initCause() on ClassNotFoundException.

2007-06-21  Jeroen Frijters  <jeroen@frijters.net>

	Fixes #32356
	* java/lang/reflect/Array.java
	(newInstance(Class,int[])): Call createMultiArray correctly.
	(createMultiArray): Fixed dimensions processing order.

2007-06-21  Jeroen Frijters  <jeroen@frijters.net>

	* gnu/java/net/loader/URLLoader.java
	(URLLoader(URLClassLoader,URLStreamHandlerCache,
	URLStreamHandlerFactory,URL,URL)): Disabiguate CodeSource constructor
	invocation.
	* java/awt/AWTKeyStroke.java
	(LinkedHashMap.removeEldestEntry): Use Map.Entry to fix compile
	error when compiled against OpenJDK java.util package.
	* java/awt/AlphaComposite.java
	(LinkedHashMap.removeEldestEntry): Use Map.Entry to fix compile
	error when compiled against OpenJDK java.util package.

2007-06-21  Jeroen Frijters  <jeroen@frijters.net>

	* gnu/java/security/Engine.java
	(getInstance(String,String,Provider,Object[]): Use correctly cased
	property name.

2007-07-19  Keith Seitz  <keiths@redhat.com>

	* classpath/gnu/classpath/jdwp/value/StringValue.java
	(StringValue): Tag of StringValue is STRING not OBJECT.