@@ -1,3 +1,10 @@
+2007-06-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* tools/Makefile.am:
+	Compile in com.sun.tools.javah
+	* tools/com/sun/tools/javah/Main.java:
+	Javah Sun-->Classpath wrapper.
+	
 2007-06-21  Christian Thalinger  <twisti@complang.tuwien.ac.at>
 
 	* javax/swing/text/html/parser/AttributeList.java (getValues):
